--- a/localSearch/css/styles.css
+++ b/localSearch/css/styles.css
@@ -9,20 +9,43 @@ textarea:focus, input:focus{
     outline: 0;
 }
 
+#corpusUpload button {
+  text-transform: uppercase;
+  padding: .5em 1em;
+  background-color: #ffc64b;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 12px;
+  -webkit-transition: all .25s ease-out;
+  transition: all .25s ease-out;
+}
+
+#corpusUpload button:hover {
+  opacity: 0.75;
+}
+
 #wrapper {
   width: 70%;
-  margin: 30px auto;
+  margin: 7% auto;
+}
+
+#queryForm {
+  margin-top:10px;
 }
 
 #userCorpus {
   font-size: 14px;
-  padding: 10px 0 10px 10px;
+  padding: 20px;
   border: 1px solid rgb(236, 236, 236);
-  width: 99%;
+  width: 100%;
   height: 100px;
+  box-sizing: border-box;
+  line-height: 18px;
 }
 
 #query {
+  margin-top: 10px;
   color: #39464E;
   padding: 10px 0 10px 11px;
   font-size: 30px;
@@ -44,6 +67,7 @@ textarea:focus, input:focus{
   margin: 0px;
   padding: 0px;
 }
+
 #query_autocomplete_results li {
   background-color: rgba(255,255,255,0.95);
   padding: 10px 0px 10px 15px;
@@ -54,6 +78,13 @@ textarea:focus, input:focus{
 #query_autocomplete_results li:hover {
   cursor: pointer;
   background-color:#f2f2f2;
+}
+
+#stats {
+  float: right;
+  font-size: 13px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .clear {
